# prism

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yaml  prism-config-schema.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: proxy_benchmark.rs  routing_benchmark.rs  throughput_benchmark.rs
completions/: prism.bash  prism.fish  prism.zsh
deploy/grafana/: alerting-rules.yaml  prism-dashboard.json
deploy/helm/prism/: Chart.yaml  values.yaml
deploy/helm/prism/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/systemd/: README.md  prism.env  prism.service
docs/: ARCHITECTURE.md  SECURITY-HARDENING.md
examples/: api-gateway.yaml  basic.yaml  caching.yaml  config.toml  distributed-rate-limit.yaml  edge-compute.yaml  enterprise.yaml  full-featured.yaml  gitops.yaml  high-performance.yaml  http3.yaml  https-termination.yaml  l4_proxy.yaml  llm-gateway.yaml  load-balancing.yaml  microservices.yaml  mtls.yaml  nginx.conf  oauth2.yaml  prism.yaml  prometheus.yml  redis_cache.yaml  slo.yaml
examples/migrate/: README.md  sample-haproxy.cfg  sample-nginx.conf
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_header_parser.rs  fuzz_path_matcher.rs  fuzz_url_parser.rs
scripts/load-testing/: README.md  k6-basic.js  vegeta-attack.sh  wrk-basic.lua
src/: error.rs  lib.rs  main.rs
src/admin/: mod.rs
src/chaos/: mod.rs
src/circuit_breaker_v2/: mod.rs
src/coalescing/: mod.rs
src/compression/: mod.rs
src/config/: env.rs  mod.rs  types.rs  validation.rs
src/edge/: mod.rs
src/edge_cache/: mod.rs
src/federation/: mod.rs
src/georouting/: mod.rs
src/gitops/: config.rs  mod.rs  repository.rs  sync.rs  validation.rs  webhook.rs
src/grpc/: mod.rs  proxy.rs
src/io_uring/: mod.rs
src/k8s/: mod.rs
src/l4/: config.rs  health.rs  mod.rs  proxy.rs  stats.rs
src/listener/: http3.rs  mod.rs  tls.rs
src/llm/: config.rs  middleware.rs  mod.rs  provider.rs  router.rs  streaming.rs  tokenizer.rs
src/middleware/: auth.rs  body_limit.rs  cache.rs  cache_redis.rs  chain.rs  chaos.rs  compression.rs  concurrency.rs  cors.rs  headers.rs  hedging.rs  ip_filter.rs  mod.rs  oauth.rs  rate_limit.rs  rate_limit_distributed.rs  request_id.rs  retry.rs  rewrite.rs  timeout.rs
src/migrate/: envoy.rs  haproxy.rs  mod.rs  nginx.rs  traefik.rs
src/migration/: mod.rs
src/ml/: mod.rs
src/observability/: anomaly.rs  ebpf.rs  logging.rs  metrics.rs  mod.rs  slo.rs  tracing.rs
src/openapi/: mod.rs
src/plugin/: mod.rs  runtime.rs  types.rs
src/raft/: mod.rs
src/replay/: mod.rs
src/router/: graphql.rs  matcher.rs  mod.rs  traffic_split.rs
src/server/: handler.rs  mod.rs  reload.rs  shutdown.rs
src/shadowing/: mod.rs
src/spiffe/: mod.rs
src/transform/: mod.rs
src/tui/: app.rs  dashboard.rs  mod.rs
src/upstream/: balancer.rs  health.rs  mod.rs  pool.rs
src/versioning/: mod.rs
src/websocket/: mod.rs
src/webtransport/: mod.rs
src/xds/: mod.rs
src/zerocopy/: mod.rs
tests/: e2e_tests.rs  integration_tests.rs  property_tests.rs
