[package]
name = "prism"
version = "1.0.0"
edition = "2021"
description = "High-performance, memory-safe reverse proxy written in Rust"
license = "MIT"
authors = ["Prism Contributors"]
keywords = ["proxy", "reverse-proxy", "http", "tls", "load-balancer"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "parking_lot"] }

# HTTP stack
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Concurrency utilities
dashmap = "6"
parking_lot = "0.12"
arc-swap = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = "2"
pin-project-lite = "0.2"
async-trait = "0.1"
futures = "0.3"
notify = "7"
rand = "0.8"
humantime = "2"
humantime-serde = "1"
hex = "0.4"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Compression
flate2 = "1"
brotli = "7"
zstd = "0.13"
glob = "0.3"

# WebSocket
tokio-tungstenite = "0.26"
tungstenite = "0.26"
base64 = "0.22"

# TUI Dashboard
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# eBPF Observability (Linux only)
# Note: eBPF requires Linux kernel 4.9+ and root/CAP_BPF capability

# Authentication
jsonwebtoken = "9"
subtle = "2"  # Constant-time comparison for security
sha2 = "0.10"  # For PKCE S256 challenge

# OpenTelemetry (optional)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }
opentelemetry-jaeger-propagator = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# gRPC/HTTP2
h2 = "0.4"

# Distributed rate limiting (optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# HTTP/3 / QUIC (optional)
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }

# SPIFFE/SPIRE (optional)
spiffe = { version = "0.5", optional = true }

# xDS / gRPC (optional)
prost = { version = "0.13", optional = true }
tonic = { version = "0.12", optional = true }

# Kubernetes (optional)
kube = { version = "0.95", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }

# WebAssembly runtime (optional - for edge and plugins)
wasmtime = { version = "25", optional = true }

# AI/ML for anomaly detection (optional)
ndarray = { version = "0.16", optional = true }
linfa = { version = "0.7", optional = true }
smartcore = { version = "0.3", optional = true }

# GraphQL parsing (optional)
graphql-parser = { version = "0.4", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }  # io_uring support (Linux 5.1+)
aya = { version = "0.13", optional = true }  # eBPF (Linux 4.9+)
aya-log = { version = "0.2", optional = true }  # eBPF logging

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
tempfile = "3"
wiremock = "0.6"
reqwest = { version = "0.12", features = ["rustls-tls"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
futures = "0.3"

[[bin]]
name = "prism"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []

# Core optional features
http3 = ["dep:quinn", "dep:h3", "dep:h3-quinn"]  # HTTP/3 with QUIC transport
distributed-rate-limit = ["redis"]  # Distributed rate limiting with Redis
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-jaeger-propagator", "dep:tracing-opentelemetry"]  # Distributed tracing
tui = ["dep:ratatui", "dep:crossterm"]  # Interactive TUI dashboard

# Platform-specific features (Linux only)
io_uring = ["dep:io-uring"]  # High-performance async I/O (Linux 5.1+)
ebpf = ["dep:aya", "dep:aya-log"]  # eBPF observability (Linux 4.9+)

# Zero-trust / Service mesh features
spiffe = ["dep:spiffe"]  # SPIFFE/SPIRE workload identity
xds = ["dep:prost", "dep:tonic"]  # Envoy xDS API compatibility

# Kubernetes integration
kubernetes = ["dep:kube", "dep:k8s-openapi"]  # Kubernetes Gateway API support

# Edge computing
edge = ["dep:wasmtime"]  # Cloudflare Workers-style edge functions

# WASM plugin system
plugins = ["dep:wasmtime"]  # WebAssembly plugin support

# AI/ML features
anomaly-detection = ["dep:ndarray", "dep:linfa", "dep:smartcore"]  # AI anomaly detection

# Protocol features
graphql = ["dep:graphql-parser"]  # GraphQL-aware routing

# Feature bundles
full = ["http3", "io_uring", "ebpf", "spiffe", "xds", "kubernetes", "edge", "plugins", "anomaly-detection", "graphql", "opentelemetry", "tui"]
enterprise = ["spiffe", "xds", "kubernetes", "anomaly-detection", "ebpf"]
edge-compute = ["edge", "plugins", "graphql"]

[[bench]]
name = "proxy_benchmark"
harness = false

[[bench]]
name = "routing_benchmark"
harness = false

[[bench]]
name = "throughput_benchmark"
harness = false
